--- a/t04.html
+++ b/t04.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Título da página</title>
+    <title>Cotações</title>
     <meta charset="utf-8">
   </head>
   <body>
@@ -24,7 +24,7 @@
                   <td>R$ 352920,95</td>
                 </tr>
         </table>
-        29/10/2021
+        29/10/2021 - Gabriel Barroso
   </body>
   <style>
     table, th, td {
